--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/bcryptjs": "^2.4.6",
+		"@types/cors": "^2.8.17",
+		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.21",
 		"@types/web3": "^1.2.2",
 		"axios": "^1.6.8",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
