local prod swagger differentiated

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=4000
 MONGO_URI=mongodb+srv://admin-nilabhra:Test123@blogcluster.wlq6y.mongodb.net/carbon-cell-db?retryWrites=true&w=majority
 JWT_SECRET=tuyswhsdsdguis32856vbxkvushop
 QUICKNODE_HTTP_ENDPOINT=https://wild-prettiest-pool.quiknode.pro/3c529becaf1e2855a418176850688451a0a67f99/
+NODE_ENV=development
